# synapse

./: .env  CHANGELOG.md  hie.yaml  synapse.cabal
.github/workflows/: haskell.yml
app/: Main.hs
db/: schema.sql
db/migrations/: 20230702225937_initial_migration.sql  20230705233850_add_name_column.sql
src/: Commands.hs  Handlers.hs  Main.hs  Parser.hs  SynapseUtils.hs  Templates.hs  Types.hs
test/: Main.hs
