name:                synapse
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/synapse#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
data-files:          resources/style.css

executable synapse
  hs-source-dirs:      src
  autogen-modules:     Paths_synapse
  other-modules:       Templates,
                       Types,
                       Paths_synapse
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       text,
                       cmark,
                       regex-tdfa,
                       directory,
                       blaze-html
