name:                synapse
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/synapse#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
data-files:          resources/style.css,
                     resources/pico.min.css

library
  hs-source-dirs:      src
  exposed-modules:     Types, Templates, SynapseUtils
  autogen-modules:     Paths_synapse
  other-modules:       Paths_synapse
  default-language:    Haskell2010
  build-depends:      base >= 4.7 && < 5,
                      text,
                      cmark,
                      regex-tdfa,
                      directory,
                      blaze-html,
                      yaml,
                      rio,
                      cmark-gfm,
                      lens,
                      sqlite-simple

executable synapse-exe
  hs-source-dirs:      app
  autogen-modules:     Paths_synapse
  other-modules:       Paths_synapse
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       text,
                       directory,
                       yaml,
                       rio,
                       synapse

Test-Suite test-synapse
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  build-depends:      base >=4.7 && <5,
                      test-framework,
                      test-framework-hunit,
                      HUnit,
                      synapse
  default-language:   Haskell2010
