name:                synapse
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/synapse#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable synapse
  hs-source-dirs:      src
  other-modules:       Commands,
                       Types,
                       Handlers,
                       Templates
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       rio,
                       sqlite-simple,
                       scotty,
                       blaze-html
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
  default-extensions:  ImportQualifiedPost
